--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -7,9 +7,16 @@
 - name: Ray tracer
   url: raytracer/index.html
 
+- name: High Dimensional Data Visualization
+  url: hdvis.html
+
+- name: Fractal
+  url: fractal/index.html
+
+#- name: Interactive Voronoi Diagram
+#  url: voronoi/index.html
+
 - name: MineSweeper
   url: minesweeper/index.html
 
-- name: High Dimensional Data Visualization
-  url: hdvis.html
 
