--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -1,6 +1,9 @@
 - name: ImageProcJS
   url: imageprocjs/index.html
 
+- name: CVjs
+  url: cvjs/index.html
+
 - name: Ray tracer
   url: raytracer/index.html
 
@@ -12,5 +15,3 @@
 
 - name: MineSweeper
   url: minesweeper/index.html
-
-
